@@ -1,5 +1,9 @@
 2009-09-23  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* src/pj_gridlist.c: Implement mutex protection for grid loader/cacher.
+
+	* src/pj_mutex.c: fix up windows support.
+
 	* nad/ntf_r93.gsb: set mime-type to binary so it isn't corrupted on 
 	windows systems.
 
